2008-10-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightParsedDocument.cs: Enable folding.

	* Makefile.am:
	* MonoDevelop.Moonlight.mdp: Updated.

	* MonoDevelop.Moonlight/MoonlightParser.cs: Use StateEngine XML parser.
	Gives better position information and more robust errors.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightParser.cs: Fix return type of
	InitialiseComponent.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/Moonlight-UserControlXaml.xft.xml:
	* Templates/Moonlight-ApplicationProject.xpt.xml: Fix end tag in user
	control.

	* MonoDevelop.Moonlight/MoonlightEditorExtension.cs: Add stub editor
	extension. Enables path bar.

	* MonoDevelop.Moonlight/XamlG.cs: Import xamlg from moonlight.

	* Makefile.am:
	* MonoDevelop.Moonlight.mdp:
	* MonoDevelop.Moonlight.addin.xml: Updated.

	* MonoDevelop.Moonlight/MoonlightParser.cs: Add live parser based on
	xamlg to inject member info on the fly.

2008-10-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs: Set generator and content
	type on added xaml files. Auto-add codebehind.

	* Makefile.am:
	* MonoDevelop.Moonlight.mdp: Updated.

	* MonoDevelop.Moonlight.addin.xml:
	* Templates/Moonlight-Xaml.xft.xml:
	* Templates/Moonlight-Library.xpt.xml:
	* Templates/Moonlight-Application.xpt.xml:
	* Templates/Moonlight-LibraryProject.xpt.xml:
	* Templates/Moonlight-UserControlXaml.xft.xml:
	* Templates/Moonlight-ApplicationXaml.xft.xml:
	* Templates/Moonlight-XamlWithCodeBehind.xft.xml:
	* Templates/Moonlight-ApplicationProject.xpt.xml: Updated templates.

2008-10-21  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/MoonlightProject.xpt.xml:
	* Templates/Moonlight-TestPage.xft.xml:
	* Templates/MoonlightProject-Empty.xpt.xml:
	* Templates/Moonlight-CreateSilverlightJs.xft.xml: Remove outdated
	templates.

	* Makefile.am:
	* MonoDevelop.Moonlight.mdp: